# checkoff_generator

./: .checkoffs.json  Cargo.toml  checkoffs.json  form.json
src/: checkoffs.rs  main.rs  ui.rs
src/checkoffs/: checkoffs.rs  form_text.rs  generate.rs
src/ui/: edit_window.rs  generate_window.rs  progress_window.rs  truck_window.rs  ui.rs  ui_util.rs
templates/: input.hbs  input.tex  truck_check.hbs
