[package]
name = "checkoff_generator"
authors = ["Alexander Williams <92amwilliams@gmail.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
egui = "0.19.0"
eframe = "0.19.0"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

