[package]
name = "checkoff_generator"
authors = ["Alexander Williams <92amwilliams@gmail.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
egui = {version = "0.20.1", features=['persistence']}
egui_extras = {version = "0.20.0", features=['datepicker']}
eframe = {version = "0.20.1", features=['persistence']}
serde_json = "1.0"
itertools = "0.10.5"
handlebars = "5.0.0-beta.1"
tectonic = "0.12.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

