[package]
name = "checkoff_generator"
authors = ["Alexander Williams <92amwilliams@gmail.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
egui = {version = "0.20.1", features=['persistence']}
egui_extras = {version = "0.20.0", features=['datepicker']}
eframe = {version = "0.20.1", features=['persistence']}
serde_json = "1.0"
itertools = "0.10.5"
handlebars = "5.0.0-beta.1"
tectonic = "0.12.0"
tectonic_bridge_core = "0.3.1"
rust-embed = {version = "6.4.2", features=['debug-embed']}

[dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
debug-embed = []

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "47a020d619021539a2533e56ef850696065b23a5"

[package.metadata.vcpkg.target]
x86_64-apple-darwin = { install = ["freetype","harfbuzz[icu,graphite2]"] }
aarch64-apple-darwin = { triplet = "arm64-osx", install = ["freetype","harfbuzz[icu,graphite2]"] }
x86_64-unknown-linux-gnu = { install = ["fontconfig","freetype","harfbuzz[icu,graphite2]"] }
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-release", install = ["fontconfig","freetype","harfbuzz[icu,graphite2]"] }